# react-haskell

./: .gitignore  HLint.hs  README.md  build.nix  default.nix  hackage-docs.sh  index.html  params.json  rascal.cabal  react-haskell.cabal  shell.nix  stack.yaml
assets/: exalted.md  react-haskell-meetup.md  typing.mov
example/: demo.css  main.hi  main.hs  main.js  todomvc.hs
example/animation/: LICENSE  Main.hs  Makefile  Nest.hs  Slide.hs  index.html  react-haskell-example.cabal
example/circles/: circles.hs  index.html
example/easing/: easing.hs  index.html
example/foreign/: Main.hs  Makefile  foreign.cabal  index.html  package.json
example/nest/: index.html  nest.hi  nest.hs  nest.js
example/simple/: LICENSE  Main.hs  Makefile  index.html  simple.cabal  simple.hs
example/simple-anim/: index.html  simple-anim.hs
example/src/: Chain.hs  Circles.hs  Easing.hs  Main.hs  Makefile  Nest.hs  Simple.hs  SimpleAnim.hs  Slide.hs  react-haskell-example.cabal
example/todomvc/: Makefile  todomvc.cabal  todomvc.hs  todomvc.html
lib/: bezier.js  stubs.js
sketches/: immutable.hs
src/: Rascal.hs  React.hs
src/Rascal/: Events.hs  Imports.hs  Types.hs
src/React/: Affine.hs  Anim.hs  Attrs.hs  Class.hs  DOM.hs  ElemTypes.hs  Elements.hs  Events.hs  GHCJS.hs  Imports.hs  Interpret.hs  Local.hs  PropTypes.hs  Rebindable.hs  Registry.hs  Render.hs  Style.hs  Types.hs
src/React/Anim/: Class.hs
tests/: staticdynamic.hs
