name:                react-haskell
version:             1.2.0.0
synopsis:            Haskell React bindings
description:
  This package provides high level bindings to Facebook's <facebook.github.io/react/ React> library, meant for use with <haste-lang.org Haste>.
  .
  React is a JavaScript library for building user interfaces. React (and React-Haskell) is focused on just UI - it's not a framework.
  .
  Currently React-Haskell can render simple stateful components, but not what React calls classes. Put another way, React-Haskell doesn't support lifecycle methods yet.
  .
  Here's a simple example which demonstrates basic elements, attributes, state, and handling events.
  .
  > statefulView :: StatefulReact JSString ()
  > statefulView = div_ <! class_ "container" $ do
  >     str <- getState
  >     input_ <! value_ str
  >            <! onChange (\_ evt -> toJSStr $ map toUpper $ fromJSStr $ targetValue evt)
license:             MIT
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

homepage: https://github.com/joelburget/react-haskell
bug-reports: https://github.com/joelburget/react-haskell/issues

data-dir: lib
data-files: stubs.js

flag haste-inst
  description: Built with haste-inst/hastec
  default: False

source-repository head
  type: git
  location: https://github.com/joelburget/react-haskell.git

library
  exposed-modules: React
  other-modules:
    React.Attrs,
    React.Elements,
    React.Events,
    React.Imports,
    React.Types
  other-extensions:
    FlexibleInstances,
    FlexibleContexts,
    ForeignFunctionInterface,
    GeneralizedNewtypeDeriving,
    MultiParamTypeClasses,
    OverloadedStrings
  build-depends:
    base >= 4.5 && < 4.7,
    transformers,
    monads-tf
  if flag(haste-inst)
    build-depends:
      haste-lib >= 0.4 && <0.5
  else
    build-depends:
      haste-compiler
  hs-source-dirs:      src
  default-language:    Haskell2010
