name:                foreign
version:             0.1.0.0
-- synopsis:
-- description:
license:             MIT
license-file:        LICENSE
author:              Joel Burget
maintainer:          joelburget@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable foreign
  main-is:             Main.hs
  -- other-modules:
  other-extensions:    OverloadedStrings, NamedFieldPuns, LiberalTypeSynonyms
  build-depends:
    base >= 4.7 && < 5,
    react-haskell,
    void == 0.7
  -- hs-source-dirs:
  default-language:    Haskell2010
